[gd_scene load_steps=5 format=3 uid="uid://b735rxfcexqks"]

[ext_resource type="Script" path="res://scripts/main_menu/lobby.gd" id="1_hty1g"]
[ext_resource type="PackedScene" uid="uid://dt7gjsuwry1nc" path="res://test_data/world_maps/world_test1.tscn" id="2_aiiyc"]
[ext_resource type="Script" path="res://scripts/ui/lockable_spin_box.gd" id="2_sb2tg"]
[ext_resource type="Script" path="res://scripts/main_menu/show_menu_options.gd" id="4_cq0th"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hty1g")
scenario_scene = ExtResource("2_aiiyc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.188235)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacing75" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 75.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Spacing75"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Spacing75/MarginContainer"]
layout_mode = 2
follow_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpacingTop" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Turn limit"

[node name="TurnLimitCheckBox" type="CheckBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="TurnLimitSpinBox" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer3" node_paths=PackedStringArray("check_box")]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 50.0
rounded = true
allow_greater = true
alignment = 1
script = ExtResource("2_sb2tg")
check_box = NodePath("../TurnLimitCheckBox")

[node name="Spacing5" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Recruitment"

[node name="HBoxContainer71" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer71"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer71"]
layout_mode = 2
text = "Reinforcements at the start of each turn"

[node name="Reinforcements" type="CheckBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer71"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer9" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer9"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer9"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
text = "Reinforcements size"

[node name="ReinforcementOptions" type="OptionButton" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer9" node_paths=PackedStringArray("options")]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 3
selected = 2
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Constant"
popup/item_1/id = 1
popup/item_2/text = "Proportional to population size"
popup/item_2/id = 2
script = ExtResource("4_cq0th")
options = [NodePath("../../HBoxContainer420"), NodePath("../../HBoxContainer421"), NodePath("../../HBoxContainer422")]

[node name="HBoxContainer420" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing3" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
layout_mode = 2
text = "Range:"

[node name="ReinforcementsRandomMin" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
allow_greater = true
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
layout_mode = 2
text = "to"

[node name="ReinforcementsRandomMax" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer420"]
unique_name_in_owner = true
layout_mode = 2
value = 40.0
allow_greater = true
alignment = 1

[node name="HBoxContainer421" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer421"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer421"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing3" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer421"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer421"]
layout_mode = 2
text = "Amount:"

[node name="ReinforcementsConstant" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer421"]
unique_name_in_owner = true
layout_mode = 2
value = 20.0
allow_greater = true
alignment = 1

[node name="HBoxContainer422" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer422"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer422"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing3" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer422"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer422"]
layout_mode = 2
text = "Amount per person:"

[node name="ReinforcementsPerPerson" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer422"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
value = 0.4
allow_greater = true
alignment = 1

[node name="HBoxContainer72" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer72"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer72"]
layout_mode = 2
text = "Can recruit new armies"

[node name="CanRecruit" type="CheckBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer72"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer73" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer73"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer73"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer73"]
layout_mode = 2
text = "Money cost per unit"

[node name="RecruitMoneyPerUnit" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer73"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
value = 0.1
allow_greater = true
allow_lesser = true
alignment = 1

[node name="HBoxContainer74" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer74"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer74"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer74"]
layout_mode = 2
text = "Population cost per unit"

[node name="RecruitPopulationPerUnit" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer74"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
value = 1.0
allow_greater = true
allow_lesser = true
alignment = 1

[node name="Spacing7" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "Population"

[node name="HBoxContainer69" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer69"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer69"]
layout_mode = 2
text = "Population growth"

[node name="PopulationGrowth" type="CheckBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer69"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer70" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer70"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer70"]
layout_mode = 2
text = "Extra population in starting province"

[node name="ExtraStartingPopulation" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer70"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
alignment = 1

[node name="Spacing1" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Fortresses"

[node name="FortressStart" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressStart"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressStart"]
layout_mode = 2
text = "Start with a fortress"

[node name="StartWithFortress" type="CheckBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressStart"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="FortressPurchase2" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressPurchase2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressPurchase2"]
layout_mode = 2
text = "Can be bought"

[node name="CanBuyFortress" type="CheckBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressPurchase2"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressPurchase2"]
layout_mode = 2
text = "Price:"

[node name="FortressPrice" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/FortressPurchase2" node_paths=PackedStringArray("check_box")]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
allow_greater = true
alignment = 1
script = ExtResource("2_sb2tg")
check_box = NodePath("../../FortressStart/StartWithFortress")

[node name="Spacing2" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Starting money"

[node name="StartingMoneySpinBox" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1e+06
value = 1000.0
rounded = true
allow_greater = true
allow_lesser = true
alignment = 1

[node name="Spacing6" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "Income from provinces"

[node name="ProvinceIncomeOptions" type="OptionButton" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer7" node_paths=PackedStringArray("options")]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 3
selected = 2
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Constant"
popup/item_1/id = 1
popup/item_2/text = "Proportional to population size"
popup/item_2/id = 2
script = ExtResource("4_cq0th")
options = [NodePath("../../ProvinceIncomeOption0"), NodePath("../../ProvinceIncomeOption1"), NodePath("../../ProvinceIncomeOption2")]

[node name="ProvinceIncomeOption0" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption0"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption0"]
layout_mode = 2
text = "Range:"

[node name="ProvinceIncomeRandomMin" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption0"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
allow_greater = true
allow_lesser = true
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption0"]
layout_mode = 2
text = "to"

[node name="ProvinceIncomeRandomMax" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption0"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
allow_greater = true
allow_lesser = true
alignment = 1

[node name="ProvinceIncomeOption1" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption1"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption1"]
layout_mode = 2
text = "Amount:"

[node name="ProvinceIncomeConstant" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption1"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
allow_greater = true
allow_lesser = true
alignment = 1

[node name="ProvinceIncomeOption2" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption2"]
layout_mode = 2
text = "Income per person:"

[node name="ProvinceIncomePerPerson" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/ProvinceIncomeOption2"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
value = 1.5
allow_greater = true
allow_lesser = true
alignment = 1

[node name="Spacing3" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Global attacker efficiency"

[node name="AttackerEfficiencySpinBox" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.01
step = 0.01
value = 0.9
allow_greater = true
alignment = 1

[node name="Spacing4" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Global defender efficiency"

[node name="DefenderEfficiencySpinBox" type="SpinBox" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.01
step = 0.01
value = 1.0
allow_greater = true
alignment = 1

[node name="SpacingBottom" type="Control" parent="HBoxContainer/Spacing75/MarginContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Spacing25" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 25.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Spacing25"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacing80" type="Control" parent="HBoxContainer/Spacing25/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 80.0

[node name="Spacing20" type="Control" parent="HBoxContainer/Spacing25/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="StartButton" type="Button" parent="HBoxContainer/Spacing25/VBoxContainer/Spacing20"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Start Game"

[connection signal="pressed" from="HBoxContainer/Spacing25/VBoxContainer/Spacing20/StartButton" to="." method="_on_start_button_pressed"]
